--- a/BackboneDemo/Views/Shared/MasterPage.Master
+++ b/BackboneDemo/Views/Shared/MasterPage.Master
@@ -1,10 +1,17 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="MasterPage.master.cs" Inherits="BackboneDemo.Views.Shared.MasterPage" %>
+﻿<%@ Master Language="C#" Inherits="System.Web.Mvc.ViewMasterPage" %>
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head runat="server">
     <title></title>
+
+    <script type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js'></script>
+
+    <script src="<%: Url.Content("~/Scripts/Backbone/underscore-min.js") %>" type="text/javascript"></script>
+    <script src="<%: Url.Content("~/Scripts/Backbone/backbone-min.js") %>" type="text/javascript"></script>
+    <script src="<%: Url.Content("~/Scripts/Backbone/backbone_base_view.js") %>" type="text/javascript"></script>
+    <script src="<%: Url.Content("~/Scripts/Backbone/handlebars.1.0.0.beta.3.js") %>" type="text/javascript"></script>
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
