--- a/BackboneDemo/Content/Site.css
+++ b/BackboneDemo/Content/Site.css
@@ -1,68 +1,35 @@
+
+li, ul, li fieldset div
+{display: inline-block }
+
+li fieldset div.add_field
+{display: block }
+
+ul, li
+{ margin : 1.5em;}
+
+ul, li
+{ padding : 2em;}
+
+li fieldset label
+{ padding-left : 1em;}
+
+fieldset
+{min-width:40em;}
+
+li 
+{
+    -moz-box-shadow: 10px 10px 5px #333;
+    -webkit-box-shadow: 10px 10px 5px #333;
+    box-shadow: 10px 10px 5px #333;
+}
+
 body
-{
-    font-size: 75%;
-    font-family: Verdana, Tahoma, Arial, "Helvetica Neue", Helvetica, Sans-Serif;
-    color: #232323;
-    background-color: #fff;
-}
-
-/* Styles for basic forms
------------------------------------------------------------*/
-
-fieldset 
-{
-    border:1px solid #ddd;
-    padding:0 1.4em 1.4em 1.4em;
-    margin:0 0 1.5em 0;
-}
-
-legend 
-{
-    font-size:1.2em;
-    font-weight: bold;
-}
-
-textarea 
-{
-    min-height: 75px;
-}
-
-.editor-label 
-{
-    margin: 1em 0 0 0;
-}
-
-.editor-field 
-{
-    margin:0.5em 0 0 0;
-}
+{ background-color: #555;}
 
 
-/* Styles for validation helpers
------------------------------------------------------------*/
-.field-validation-error
-{
-    color: #ff0000;
-}
+li
+{ background-color: #EEE;}
 
-.field-validation-valid
-{
-    display: none;
-}
-
-.input-validation-error
-{
-    border: 1px solid #ff0000;
-    background-color: #ffeeee;
-}
-
-.validation-summary-errors
-{
-    font-weight: bold;
-    color: #ff0000;
-}
-
-.validation-summary-valid
-{
-    display: none;
-}
+li:hover
+{ background-color: #DDD;}
