--- a/BackboneDemo/Views/Shared/MasterPage.Master
+++ b/BackboneDemo/Views/Shared/MasterPage.Master
@@ -5,8 +5,9 @@
 <head runat="server">
     <title></title>
 
-    <script type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js'></script>
+    <link rel="stylesheet" type="text/css" href="/Content/Site.css" />
 
+    <script type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js'></script>
     <script src="<%: Url.Content("~/Scripts/Backbone/underscore-min.js") %>" type="text/javascript"></script>
     <script src="<%: Url.Content("~/Scripts/Backbone/backbone-min.js") %>" type="text/javascript"></script>
     <script src="<%: Url.Content("~/Scripts/Backbone/backbone_base_view.js") %>" type="text/javascript"></script>
